<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MicroShop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="under_construcate">正在建设中....</string>
    <string name="tab_one">动态</string>
    <string name="tab_two">本地</string>
    <string name="tab_three">搜索</string>
    <string name="tab_four">我的</string>
    <string name="dynamic_title">优商圈动态</string>
    <string name="dynamic_name">炫彩美妆馆</string>
    <string name="dynamic_address">重庆</string>
    <string name="dynamic_collect_btn">+  收藏</string>
    <string name="dynamic_has_collect_btn">已收藏</string>
    <string name="dynamic_collect">0</string>
    <string name="dynamic_share">分享</string>
    <string name="dynamic_news_price">￥129.00</string>
    <string name="dynamic_old_price">￥420.00</string>
    <string name="price">￥</string>
    <string name="dynamic_count">已售125</string>
    <string name="dynamic_intro">超in韩国雾面妆容，内含：唯美15ml*2+蜡笔唇膏+丝雾眼线笔+明丽纤长睫毛膏</string>
    <string name="logo_input_username">账号</string>
    <string name="logo_input_pwd">密码</string>
    <string name="logo_btn">登录</string>
    <string name="logo_reg_line">|</string>
    <string name="logo_reg">注册账号</string>
    <string name="logo_forgetpwd">忘记密码</string>
    <string name="logo_other">其他方式登录</string>
    <string name="local_address">580m</string>
    <string name="local_time">16分钟前</string>
    <string name="local_name">Yvan玄</string>
    <string name="local_intro">今年的流行色是玛莎拉酒红，高腰大摆半身裙</string>
    <string name="search_item_name">咖啡陪你(昌平永旺店)</string>
    <string name="search_item_mark">123评价</string>
    <string name="search_item_address">咖啡店        回龙观</string>
    <string name="search_item_distance">326米</string>
    <string name="search_item_intro">刨冰，巧克力猴子面包，伯爵红茶，冰激凌华夫并，意面，酸奶冰沙</string>
    <string name="search_item_rline">路线</string>
    <string name="search_item_tel">电话</string>
    <string name="search_item_dian">进店逛逛</string>
    <string name="search_item_map">地图</string>
    <string name="search_input_value">咖啡</string>
    <string name="product_collect">收藏</string>
    <string name="product_name">春日可爱日系原点套头针织衫</string>
    <string name="product_news_price">￥168</string>
    <string name="product_old_price">￥198</string>
    <string name="product_service_one">7天无理由</string>
    <string name="product_service_two">正品保障</string>
    <string name="product_service_three">如实描述</string>
    <string name="product_comments">最新评论</string>
    <string name="product_comments_one">美妞腿脸朝这看:大白，最爱</string>
    <string name="product_comments_two">兔Bady:大白</string>
    <string name="product_item_name">马先生的工作室</string>
    <string name="product_item_mark">123收藏</string>
    <string name="product_item_b_count">20</string>
    <string name="product_item_b">宝贝</string>
    <string name="product_item_s">活动</string>
    <string name="product_item_s_count">10</string>
    <string name="product_item_g_count">10</string>
    <string name="product_item_g">关注</string>
    <string name="product_btn_more">查看更多分类</string>
    <string name="product_btn_dian">进入店铺</string>
    <string name="shop_main_intro">店铺宣言未填写</string>
    <string name="shop_main_ban">排行榜</string>
    <string name="shop_main_ban_collect">收藏排行</string>
    <string name="shop_main_ban_sell">访问排行</string>
    <string name="shop_main_like">猜你喜欢</string>
    <string name="shop_main_bao">宝贝分类</string>
    <string name="shop_main_d_intro">店铺简介</string>
    <string name="shop_main_tel">联系方式</string>
    <string name="reg_btn">注册</string>
    <string name="reg_verification">验证码</string>
    <string name="verification_ok">确定</string>
    <string name="verification_btn">52s后重新获取</string>
    <string name="verification_hint">短信验证码已经发送至你的手机15022321023</string>
    <string name="address_name">星巴克咖啡（北京北清永旺商城店）</string>
    <string name="address_distance">距离313米</string>
    <string name="address_detail">详细    ></string>
    <string name="search_list">列表</string>
    <string name="product_tab_one_title">图文详细</string>
    <string name="product_tab_two_title">产品参数</string>
    <string name="product_tab_three_title">店铺推荐</string>
    <string name="product_img_one">品牌：Asobio/傲娇</string>
    <string name="product_img_two">货号：RB222  通勤：OL风格    服装版型：修身</string>
    <string name="product_img_three">质地：棉    衣长：短款(40cm≤衣长≤50cm)</string>
    <string name="product_img_four">尺码：XS(155/80A) S(160/84A) M(165/88A)</string>
    <string name="pop_shop_main_phone">电话：023-40360265</string>
    <string name="pop_shop_main_weixin">微信：568952362</string>
    <string name="product_comments_three">sdfs:真是很漂亮啊</string>
    <string name="product_info_num">访问数</string>
    <string name="product_collect_num">收藏数</string>
    <string name="product_good_num">点赞数</string>
    <string name="product_comment_num">评论数</string>
    <string name="product_head_title">商品详情</string>

</resources>