<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:id="@+id/address_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/address_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:text="@string/address_detail"
                android:textColor="#0000FF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@id/address_detail"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/address_bottom_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/address_name"
                    android:textColor="#000000"
                    android:textSize="@dimen/front_14" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_distance"
                        android:textColor="#c1c1c1"
                        android:textSize="@dimen/front_14" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RatingBar
                            android:id="@+id/search_item_rate_bar"
                            style="@style/StyleRatingBarYellow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:rating="3"
                            android:stepSize="0.5" />

                        <TextView
                            android:id="@+id/search_item_mark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:text="@string/search_item_mark"
                            android:textColor="#A8ADB1"
                            android:textSize="@dimen/front_14" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/search_item_intro"
            android:textColor="#9D9EA0"
            android:textSize="@dimen/front_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <LinearLayout
                    android:id="@+id/search_item_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/search_item_route_icon"
                        android:layout_width="16dp"
                        android:layout_height="17dp"
                        android:layout_gravity="center_vertical"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:duplicateParentState="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/route_selects" />

                    <TextView
                        android:id="@+id/search_item_route_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:duplicateParentState="true"
                        android:singleLine="true"
                        android:text="@string/search_item_rline"
                        android:textColor="@drawable/text_select"
                        android:textSize="@dimen/front_14" />
                </LinearLayout>

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:background="@drawable/search_item_line"
                    android:contentDescription="@null"
                    android:scaleType="centerInside" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <LinearLayout
                    android:id="@+id/search_item_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="17dp"
                        android:layout_gravity="center_vertical"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:duplicateParentState="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/phone_selects" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:duplicateParentState="true"
                        android:singleLine="true"
                        android:text="@string/search_item_tel"
                        android:textColor="@drawable/text_select"
                        android:textSize="@dimen/front_14" />
                </LinearLayout>

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:background="@drawable/search_item_line"
                    android:contentDescription="@null"
                    android:scaleType="centerInside" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <LinearLayout
                    android:id="@+id/search_item_shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="17dp"
                        android:layout_gravity="center_vertical"
                        android:adjustViewBounds="true"
                        android:background="@drawable/dian_selects"
                        android:contentDescription="@null"
                        android:duplicateParentState="true"
                        android:scaleType="centerInside" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:duplicateParentState="true"
                        android:singleLine="true"
                        android:text="@string/search_item_dian"
                        android:textColor="@drawable/text_select"
                        android:textSize="@dimen/front_14" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/address_bottom"
        android:clickable="true" />

</RelativeLayout>