<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#D1D4D5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFffffff"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/search_item_img"
                android:layout_width="69dp"
                android:layout_height="69dp"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/search_item_img"
                android:contentDescription="@null"
                android:scaleType="centerInside" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/search_item_img"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/search_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_item_name"
                    android:textColor="#313436"
                    android:textSize="@dimen/front_16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <RatingBar
                        android:id="@+id/search_item_rate_bar"
                        style="@style/StyleRatingBarYellow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="3"
                        android:stepSize="0.5" />

                    <TextView
                        android:id="@+id/search_item_mark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:text="@string/search_item_mark"
                        android:textColor="#A8ADB1"
                        android:textSize="@dimen/front_14" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/search_item_address"
                        android:textColor="#A8ADB1"
                        android:textSize="@dimen/front_14" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/search_item_distance"
                        android:textColor="#A8ADB1"
                        android:textSize="@dimen/front_14" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:singleLine="true"
            android:text="@string/search_item_intro"
            android:textColor="#A8ADB1"
            android:textSize="@dimen/front_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <LinearLayout
                    android:id="@+id/search_item_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="17dp"
                        android:layout_gravity="center_vertical"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:duplicateParentState="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/route_selects" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:duplicateParentState="true"
                        android:singleLine="true"
                        android:text="@string/search_item_rline"
                        android:textColor="@drawable/text_select"
                        android:textSize="@dimen/front_14" />
                </LinearLayout>

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:background="@drawable/search_item_line"
                    android:contentDescription="@null"
                    android:scaleType="centerInside" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <LinearLayout
                    android:id="@+id/search_item_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="17dp"
                        android:layout_gravity="center_vertical"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:duplicateParentState="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/phone_selects" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:duplicateParentState="true"
                        android:singleLine="true"
                        android:text="@string/search_item_tel"
                        android:textColor="@drawable/text_select"
                        android:textSize="@dimen/front_14" />
                </LinearLayout>

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:background="@drawable/search_item_line"
                    android:contentDescription="@null"
                    android:scaleType="centerInside" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <LinearLayout
                    android:id="@+id/search_item_shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="17dp"
                        android:layout_gravity="center_vertical"
                        android:adjustViewBounds="true"
                        android:background="@drawable/dian_selects"
                        android:contentDescription="@null"
                        android:duplicateParentState="true"
                        android:scaleType="centerInside" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:duplicateParentState="true"
                        android:singleLine="true"
                        android:text="@string/search_item_dian"
                        android:textColor="@drawable/text_select"
                        android:textSize="@dimen/front_14" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D1D4D5" />

</LinearLayout>